# gmc_api_gateway/docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /gmcapi/v2
 definitions:
   model.Active:
     properties:
@@ -7,6 +8,31 @@ definitions:
         type: string
       namespace:
         type: string
+    type: object
+  model.CLUSTER:
+    properties:
+      clusterEndpoint:
+        type: string
+      clusterName:
+        type: string
+      clusterType:
+        type: string
+      gpuCnt:
+        description: |-
+          Status                  string                   `json:"status"`
+          Network                 string                   `json:"network"`
+        type: integer
+      nodeCnt:
+        type: integer
+      resourceUsage:
+        description: Gpu           []map[string]interface{} `json:"gpu,omitempty"`
+      token:
+        type: string
+    required:
+    - clusterEndpoint
+    - clusterName
+    - clusterType
+    - token
     type: object
   model.CRONJOB:
     properties:
@@ -332,8 +358,17 @@ definitions:
       readonly:
         type: boolean
     type: object
+host: 101.79.1.173:8010
 info:
-  contact: {}
+  contact:
+    name: GM-Center
+    url: https://gedge-platform.github.io/gm-center/
+  description: This is a Gedge GM-Center Swagger API.
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  title: Gedge GM-Center Swagger API
+  version: "2.0"
 paths:
   /auth:
     post:
@@ -359,19 +394,13 @@ paths:
           schema:
             $ref: '#/definitions/model.User'
       summary: Login
-  /cronjob/{name}:
+  /cluster/{name}:
     get:
       consumes:
       - application/json
-      description: get cronjob Details
+      description: get cluster Details
       parameters:
-      - default: Bearer <Add access token here>
-        description: Insert your access token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: name of the Cronjob
+      - description: name of the Cluster
         in: path
         name: name
         required: true
@@ -381,25 +410,25 @@ paths:
       responses:
         "200":
           description: OK
-          headers:
-            Token:
-              description: qwerty
-              type: string
           schema:
-            $ref: '#/definitions/model.CRONJOB'
+            $ref: '#/definitions/model.CLUSTER'
       security:
-      - ApiKeyAuth: []
-      summary: Show detail cronjob
-  /cronjobs:
+      - Bearer: []
+      summary: Show detail cluster
+  /cronjob/{name}:
     get:
       consumes:
       - application/json
-      description: get cronjob List
+      description: get cronjob Details
       parameters:
-      - default: Bearer <Add access token here>
-        description: Insert your access token
-        in: header
-        name: Authorization
+      - description: name of the Cronjob
+        in: path
+        name: name
+        required: true
+        type: string
+      - description: cluster Name of the Cronjob
+        in: query
+        name: cluster
         required: true
         type: string
       produces:
@@ -410,7 +439,22 @@ paths:
           schema:
             $ref: '#/definitions/model.CRONJOB'
       security:
-      - ApiKeyAuth: []
+      - Bearer: []
+      summary: Show detail cronjob
+  /cronjobs:
+    get:
+      consumes:
+      - application/json
+      description: get cronjob List
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.CRONJOB'
+      security:
+      - Bearer: []
       summary: Show List cronjob
   /job/:name:
     get:
@@ -446,40 +490,61 @@ paths:
           schema:
             $ref: '#/definitions/model.JOB'
       summary: Show List job
-  /pod/:name:
-    get:
-      consumes:
-      - application/json
-      description: get pods Details
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          headers:
-            Token:
-              description: qwerty
-              type: string
-          schema:
-            $ref: '#/definitions/model.POD'
-      summary: Show detail pods
   /pods:
     get:
       consumes:
       - application/json
       description: get pods List
+      parameters:
+      - description: cluster Name of the pods
+        in: query
+        name: cluster
+        type: string
+      - description: workspace Name of the pods
+        in: query
+        name: workspace
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
-          headers:
-            Token:
-              description: qwerty
-              type: string
           schema:
             $ref: '#/definitions/model.POD'
+      security:
+      - Bearer: []
       summary: Show List pods
+  /pods/{name}:
+    get:
+      consumes:
+      - application/json
+      description: get pods Details
+      parameters:
+      - description: name of the pods
+        in: path
+        name: name
+        required: true
+        type: string
+      - description: cluster Name of the pods
+        in: query
+        name: cluster
+        required: true
+        type: string
+      - description: workspace Name of the pods
+        in: query
+        name: workspace
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.POD'
+      security:
+      - Bearer: []
+      summary: Show detail pods
   /pvcs:
     get:
       consumes:
@@ -517,4 +582,12 @@ paths:
   /pvs/:name:
     get:
       responses: {}
+schemes:
+- http
+securityDefinitions:
+  Bearer:
+    description: '"Type \"Bearer \" and then your API Token"'
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
